# test

./: README.md
test/: CMakeLists.txt
test/bin_win/: All.cmd
test/bin_win/images1/1/: lena_8U.tif
test/bin_win/images1/1/2/3/: lena_color1.tif
test/dependencies/boost_1_66_0/lib64-msvc-14.0/: libboost_filesystem-vc140-mt-x64-1_66.lib
test/dependencies/opencv/opencv_3.4.3_vc14/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake  opencv_calib3d343.lib  opencv_calib3d343d.lib  opencv_core343.lib  opencv_core343d.lib  opencv_dnn343.lib  opencv_dnn343d.lib  opencv_features2d343.lib  opencv_features2d343d.lib  opencv_flann343.lib  opencv_flann343d.lib  opencv_highgui343.lib  opencv_highgui343d.lib  opencv_imgcodecs343.lib  opencv_imgcodecs343d.lib  opencv_imgproc343.lib  opencv_imgproc343d.lib  opencv_ml343.lib  opencv_ml343d.lib  opencv_objdetect343.lib  opencv_objdetect343d.lib  opencv_photo343.lib  opencv_photo343d.lib  opencv_shape343.lib  opencv_shape343d.lib  opencv_stitching343.lib  opencv_stitching343d.lib  opencv_superres343.lib  opencv_superres343d.lib  opencv_video343.lib  opencv_video343d.lib  opencv_videoio343.lib  opencv_videoio343d.lib  opencv_videostab343.lib  opencv_videostab343d.lib
test/detector/src/: detector.cpp
test/face/include/: exported.h
test/face/src/: detectFace.cpp
